--- a/chatbot.html
+++ b/chatbot.html
@@ -12,7 +12,7 @@
     <h1>Welcome to the chat bot</h1>
     <form id="form">
 
-        <label for="question"> POSEZ VOTRE QUESTION ICI:</label>
+        <label for="question"> POSEZ VOTRE QUESTION ICI: (test mouhssine)</label>
         <input type="text" id="question" name="question" aria-valuetext="question" /><br /><br />
 
         <button type="submit" id="btn">submit</button><br>
