added the chat history and its features with a new css too

--- a/chatbot.html
+++ b/chatbot.html
@@ -6,132 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Assistant</title>
 
+    <!-- Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lucide-icons@0.321.0/font/lucide-icons.min.css">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="chatbot.css">
 
     <!-- Meta Tags -->
     <meta name="description" content="AI-Powered Conversational Assistant">
 </head>
 
-<body>
-    <div class="app-container">
-        <!-- Burger Menu Toggle -->
-        <button class="burger-menu" aria-label="Toggle Menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-
+<body class="bg-gray-100 font-sans">
+    <div class="flex h-screen">
         <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="sidebar-header">
-                <button class="new-chat-btn">
-                    <i data-lucide="plus"></i>
-                    <span>New Chat</span>
+        <aside class="bg-white w-64 p-4 shadow-lg flex flex-col">
+            <div class="mb-4">
+                <button id='btn_clear'
+                    class="w-full py-2 px-4 bg-blue-500 text-white rounded-lg flex items-center justify-center">
+                    <i data-lucide="plus" class="mr-2"></i>
+                    New Chat
                 </button>
             </div>
 
-            <nav class="chat-history">
-                <h3>Recent Chats</h3>
+            <nav class="flex-grow">
+                <h3 class="text-lg font-semibold text-gray-700 mb-3">Recent Chats</h3>
                 <ul>
-                    <li class="chat-item active">
-                        <i data-lucide="message-circle"></i>
-                        <span>Web Development Tips</span>
-                        <button class="delete-chat">
-                            <i data-lucide="trash-2"></i>
+                    <!--
+                    <li class="flex items-center justify-between bg-gray-100 p-3 rounded-lg mb-2 cursor-pointer">
+                        <div class="flex items-center">
+                            <i data-lucide="message-circle" class="mr-3 text-gray-500"></i>
+                            <span id="history"></span>
+                        </div>
+                        <button>
+                            <i data-lucide="trash-2" class="text-gray-400 hover:text-red-500"></i>
                         </button>
-                    </li>
-                    <li class="chat-item">
-                        <i data-lucide="message-circle"></i>
-                        <span>Marketing Strategy</span>
-                        <button class="delete-chat">
-                            <i data-lucide="trash-2"></i>
-                        </button>
-                    </li>
+                    </li>-->
+
                 </ul>
             </nav>
 
-            <div class="sidebar-footer">
-                <div class="user-profile">
-                    <img src="https://ui-avatars.com/api/?name=John+Doe" alt="User Avatar" class="avatar">
-                    <span class="user-name">John Doe</span>
-                </div>
-                <button class="settings-btn">
-                    <i data-lucide="settings"></i>
+            <div class="mt-4 flex items-center space-x-4">
+                <img src="https://ui-avatars.com/api/?name=John+Doe" alt="User Avatar" class="w-10 h-10 rounded-full">
+                <span class="text-gray-700 font-medium">John Doe</span>
+                <button>
+                    <i data-lucide="settings" class="text-gray-400"></i>
                 </button>
             </div>
         </aside>
 
-        <!-- User Account Popup -->
-        <div class="user-account-popup" id="userAccountPopup">
-            <div class="popup-content">
-                <button class="close-popup">&times;</button>
-                <div class="user-info">
-                    <img src="https://ui-avatars.com/api/?name=John+Doe" alt="User Avatar" class="avatar">
-                    <h2>John Doe</h2>
-                    <p>john.doe@example.com</p>
-                </div>
-                <div class="popup-actions">
-                    <button>
-                        <i data-lucide="user"></i>
-                        Profile
-                    </button>
-                    <button>
-                        <i data-lucide="settings"></i>
-                        Account Settings
-                    </button>
-                    <button>
-                        <i data-lucide="log-out"></i>
-                        Logout
-                    </button>
-                </div>
-            </div>
-        </div>
-
         <!-- Main Chat Interface -->
-        <main class="chat-container">
-            <header class="chat-header">
-                <h1>AI Assistant</h1>
-                <div class="header-actions">
-                    <button class="action-btn" aria-label="Clear Conversation">
+        <main class="flex-grow flex flex-col bg-gray-50">
+            <header class="p-4 border-b bg-white shadow-sm flex items-center justify-between">
+                <h1 class="text-xl font-semibold text-gray-700">AI Assistant</h1>
+                <div class="space-x-2">
+                    <button class="text-gray-500 hover:text-red-500">
                         <i data-lucide="trash-2"></i>
                     </button>
-                    <button class="action-btn" aria-label="Settings">
+                    <button class="text-gray-500 hover:text-blue-500">
                         <i data-lucide="settings-2"></i>
                     </button>
                 </div>
             </header>
 
-            <div class="chat-messages" id="chatMessages">
-                <div class="message ai-message">
-                    <div class="message-content">
-                        <p id="answer"></p>
-                    </div>
+            <div class="flex-grow p-4 overflow-y-auto" id="chatMessages">
+                <div class="bg-white p-4 rounded-lg shadow mb-3 max-w-xl">
+                    <p class="text-gray-700" id="answer"></p>
                 </div>
             </div>
 
-            <!--
-            <form class="chat-input-form" id="chatForm">
-                <div class="input-container">
-                    <textarea id="chatInput" placeholder="Type your message..." rows="1"></textarea>
-                    <button type="submit" class="send-btn">
-                        <i data-lucide="send"></i>
-                    </button>
-                </div>
-            </form>-->
-            <form id="form">
-
-                <label for="question"> POSEZ VOTRE QUESTION ICI:</label>
-                <input type="text" id="question" name="question" aria-valuetext="question" /><br /><br />
-
-                <button type="submit" id="btn">submit</button><br>
-
+            <!-- Chat Input -->
+            <form id="form" class="p-4 bg-white border-t flex items-center space-x-4">
+                <label for="question" class="sr-only">Your Question</label>
+                <input type="text" id="question" name="question" placeholder="Type your question here..."
+                    class="flex-grow px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <button type="submit" id="btn"
+                    class="px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none">
+                    Submit
+                </button>
             </form>
         </main>
     </div>
